--- a/data/topics.yml
+++ b/data/topics.yml
@@ -22,29 +22,25 @@ cn:
   - topic: "知乎专栏投稿"
     link: "https://zhuanlan.zhihu.com/interimm"
 en:
-  - topic: ""
-    link: ""
-  - topic: ""
-    link: ""
-  - topic: ""
-    link: ""
-  - topic: ""
-    link: ""
-  - topic: ""
-    link: ""
-  - topic: ""
-    link: ""
-  - topic: ""
-    link: ""
-  - topic: ""
-    link: ""
-  - topic: ""
-    link: ""
-  - topic: ""
-    link: ""
-  - topic: ""
-    link: ""
-  - topic: ""
-    link: ""
-  - topic: ""
-    link: ""
+  - topic: "Developing Martian Cities"
+    link: "http://interimm.org/cities"
+  - topic: "Space Industries"
+    link: "http://interimm.org/hub"
+  - topic: "Interstellar Transportation Network"
+    link: "https://github.com/emptymalei/future-star-network"
+  - topic: "Space Elevators"
+    link: "https://github.com/InterImm/InterImmBook/issues/78"
+  - topic: "Propulsion Technology"
+    link: "https://github.com/InterImm/InterImmBook/issues/96"
+  - topic: "Colonizing Mars"
+    link: "https://github.com/InterImm/InterImmBook/issues/20"
+  - topic: "Martian Cities and Map of Martion Tourism"
+    link: "https://github.com/InterImm/InterImmBook/issues/59"
+  - topic: "Space Professions"
+    link: "https://github.com/InterImm/InterImmBook/issues/48"
+  - topic: "Scoring System of Exoplanets"
+    link: "https://github.com/InterImm/exoplanets/issues/7"
+  - topic: "Martian Time Keeping"
+    link: "https://github.com/InterImm/marsCalendar/issues"
+  - topic: "Editorial Board"
+    link: "https://zhuanlan.zhihu.com/interimm"
